@@ -7,10 +7,13 @@
 
 package org.elasticsearch.xpack.core.ilm;
 
+import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
+import org.elasticsearch.cluster.ProjectState;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.metadata.NodesShutdownMetadata;
+import org.elasticsearch.cluster.metadata.ProjectMetadata;
 import org.elasticsearch.cluster.metadata.SingleNodeShutdownMetadata;
 import org.elasticsearch.cluster.node.DiscoveryNodeUtils;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
@@ -29,9 +32,9 @@ import org.elasticsearch.index.IndexVersion;
 import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.node.Node;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import static org.elasticsearch.cluster.metadata.SingleNodeShutdownMetadata.Type.SIGTERM;
 import static org.elasticsearch.cluster.routing.TestShardRouting.shardRoutingBuilder;
@@ -340,7 +343,7 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
      */
     public void testExecuteReplicasNotAllocatedOnSingleNode() {
         Index index = new Index(randomAlphaOfLengthBetween(1, 20), randomAlphaOfLengthBetween(1, 20));
-        Map<String, String> requires = Collections.singletonMap("_id", "node1");
+        Map<String, String> requires = Map.of("_id", "node1");
         Settings.Builder existingSettings = Settings.builder()
             .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
             .put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_PREFIX + "._id", "node1")
@@ -376,7 +379,7 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
 
     public void testExecuteReplicasButCopiesNotPresent() {
         Index index = new Index(randomAlphaOfLengthBetween(1, 20), randomAlphaOfLengthBetween(1, 20));
-        Map<String, String> requires = Collections.singletonMap("_id", "node1");
+        Map<String, String> requires = Map.of("_id", "node1");
         Settings.Builder existingSettings = Settings.builder()
             .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
             .put(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_PREFIX + "._id", "node1")
@@ -412,13 +415,13 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
 
     public void testExecuteIndexMissing() throws Exception {
         Index index = new Index(randomAlphaOfLengthBetween(1, 20), randomAlphaOfLengthBetween(1, 20));
-        ClusterState clusterState = ClusterState.builder(ClusterState.EMPTY_STATE).build();
+        ProjectState state = projectStateWithEmptyProject();
 
         CheckShrinkReadyStep step = createRandomInstance();
 
-        ClusterStateWaitStep.Result actualResult = step.isConditionMet(index, clusterState);
-        assertFalse(actualResult.isComplete());
-        assertNull(actualResult.getInfomationContext());
+        ClusterStateWaitStep.Result actualResult = step.isConditionMet(index, state);
+        assertFalse(actualResult.complete());
+        assertNull(actualResult.informationContext());
     }
 
     public void testStepCompletableIfAllShardsActive() {
@@ -448,23 +451,25 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
                 .numberOfReplicas(1)
                 .build();
             Map<String, IndexMetadata> indices = Map.of(index.getName(), indexMetadata);
+            var project = ProjectMetadata.builder(randomProjectIdOrDefault()).indices(indices).build();
 
             final String targetNodeName = type == SingleNodeShutdownMetadata.Type.REPLACE ? randomAlphaOfLengthBetween(10, 20) : null;
             final TimeValue grace = type == SIGTERM ? randomTimeValue() : null;
-            ClusterState clusterState = ClusterState.builder(ClusterState.EMPTY_STATE)
+            ProjectState state = ClusterState.builder(ClusterName.DEFAULT)
                 .metadata(
                     Metadata.builder()
-                        .indices(indices)
+                        .put(project)
                         .putCustom(
                             NodesShutdownMetadata.TYPE,
                             new NodesShutdownMetadata(
-                                Collections.singletonMap(
+                                Map.of(
                                     "node1",
                                     SingleNodeShutdownMetadata.builder()
                                         .setType(type)
                                         .setStartedAtMillis(randomNonNegativeLong())
                                         .setReason("test")
                                         .setNodeId("node1")
+                                        .setNodeEphemeralId("node1")
                                         .setTargetNodeName(targetNodeName)
                                         .setGracePeriod(grace)
                                         .build()
@@ -491,11 +496,12 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
                                 .build()
                         )
                 )
-                .routingTable(RoutingTable.builder().add(indexRoutingTable).build())
-                .build();
+                .putRoutingTable(project.id(), RoutingTable.builder().add(indexRoutingTable).build())
+                .build()
+                .projectState(project.id());
             assertTrue(step.isCompletable());
-            ClusterStateWaitStep.Result actualResult = step.isConditionMet(index, clusterState);
-            assertTrue(actualResult.isComplete());
+            ClusterStateWaitStep.Result actualResult = step.isConditionMet(index, state);
+            assertTrue(actualResult.complete());
             assertTrue(step.isCompletable());
         }
     }
@@ -527,23 +533,25 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
                 .numberOfReplicas(1)
                 .build();
             Map<String, IndexMetadata> indices = Map.of(index.getName(), indexMetadata);
+            var project = ProjectMetadata.builder(randomProjectIdOrDefault()).indices(indices).build();
 
             final String targetNodeName = type == SingleNodeShutdownMetadata.Type.REPLACE ? randomAlphaOfLengthBetween(10, 20) : null;
             final TimeValue grace = type == SIGTERM ? randomTimeValue() : null;
-            ClusterState clusterState = ClusterState.builder(ClusterState.EMPTY_STATE)
+            ProjectState state = ClusterState.builder(ClusterName.DEFAULT)
                 .metadata(
                     Metadata.builder()
-                        .indices(indices)
+                        .put(project)
                         .putCustom(
                             NodesShutdownMetadata.TYPE,
                             new NodesShutdownMetadata(
-                                Collections.singletonMap(
+                                Map.of(
                                     "node1",
                                     SingleNodeShutdownMetadata.builder()
                                         .setType(type)
                                         .setStartedAtMillis(randomNonNegativeLong())
                                         .setReason("test")
                                         .setNodeId("node1")
+                                        .setNodeEphemeralId("node1")
                                         .setTargetNodeName(targetNodeName)
                                         .setGracePeriod(grace)
                                         .build()
@@ -570,13 +578,14 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
                                 .build()
                         )
                 )
-                .routingTable(RoutingTable.builder().add(indexRoutingTable).build())
-                .build();
+                .putRoutingTable(project.id(), RoutingTable.builder().add(indexRoutingTable).build())
+                .build()
+                .projectState(project.id());
             assertTrue(step.isCompletable());
-            ClusterStateWaitStep.Result actualResult = step.isConditionMet(index, clusterState);
-            assertFalse(actualResult.isComplete());
+            ClusterStateWaitStep.Result actualResult = step.isConditionMet(index, state);
+            assertFalse(actualResult.complete());
             assertThat(
-                Strings.toString(actualResult.getInfomationContext()),
+                Strings.toString(actualResult.informationContext()),
                 containsString("node with id [node1] is currently marked as shutting down")
             );
             assertFalse(step.isCompletable());
@@ -600,9 +609,10 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
             .numberOfReplicas(replicas)
             .build();
         Map<String, IndexMetadata> indices = Map.of(index.getName(), indexMetadata);
+        var project = ProjectMetadata.builder(randomProjectIdOrDefault()).indices(indices).build();
 
-        ClusterState clusterState = ClusterState.builder(ClusterState.EMPTY_STATE)
-            .metadata(Metadata.builder().indices(indices))
+        ProjectState state = ClusterState.builder(ClusterState.EMPTY_STATE)
+            .putProjectMetadata(project)
             .nodes(
                 DiscoveryNodes.builder()
                     .add(
@@ -622,11 +632,12 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
                             .build()
                     )
             )
-            .routingTable(RoutingTable.builder().add(indexRoutingTable).build())
-            .build();
-        ClusterStateWaitStep.Result actualResult = step.isConditionMet(index, clusterState);
-        assertEquals(expectedResult.isComplete(), actualResult.isComplete());
-        assertEquals(expectedResult.getInfomationContext(), actualResult.getInfomationContext());
+            .putRoutingTable(project.id(), RoutingTable.builder().add(indexRoutingTable).build())
+            .build()
+            .projectState(project.id());
+        ClusterStateWaitStep.Result actualResult = step.isConditionMet(index, state);
+        assertEquals(expectedResult.complete(), actualResult.complete());
+        assertEquals(expectedResult.informationContext(), actualResult.informationContext());
     }
 
     public static UnassignedInfo randomUnassignedInfo(String message) {
@@ -649,7 +660,7 @@ public class CheckShrinkReadyStepTests extends AbstractStepTestCase<CheckShrinkR
             System.currentTimeMillis(),
             delayed,
             UnassignedInfo.AllocationStatus.NO_ATTEMPT,
-            Collections.emptySet(),
+            Set.of(),
             lastAllocatedNodeId
         );
     }
